# football-tactics

./: CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  database.py  docker-compose.yml  main.py  models.py  nginx.conf  pyproject.toml
frontend/: app.js  index.html  styles.css
